fix/sloppy blurred blackdrop impl

--- a/src/components/backdrop/backdrop.module.css
+++ b/src/components/backdrop/backdrop.module.css
@@ -1,63 +1,35 @@
-#sectionBackdrop {
+.sectionBackdrop {
     position: relative;
-    z-index: -1;
+    top: -24px;
+    left: 0;
     width: 80vw;
+    max-height: 500px;
     margin-left: auto;
     margin-right: auto;
-    transform: translateY(-5vw);
-
-    .imageWrapper {
-        position: relative;
-        overflow: hidden;
-    }
-
-    .image-wrapper::after {
-        content: '';
-        position: absolute;
-        inset: 0;
-        pointer-events: none;
-        background: radial-gradient(circle,
-                rgba(0, 0, 0, 0) 1%,
-                rgba(0, 0, 0, 0.01) 100%);
-    }
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+}
 
 
-    .overlay {
-        z-index: 0;
-        position: absolute;
-        inset: 0;
-        pointer-events: none;
-        background: radial-gradient(circle,
-                rgba(0, 0, 0, 0) 5%,
-                /* fully transparent center */
-                rgba(var(--blackRgb), 0.10) 10%,
-                rgba(var(--blackRgb), 0.11) 15%,
-                rgba(var(--blackRgb), 0.14) 20%,
-                rgba(var(--blackRgb), 0.15) 30%,
-                rgba(var(--blackRgb), 0.2) 40%,
-                rgba(var(--blackRgb), 0.35) 50%,
-                rgba(var(--blackRgb), 0.5) 60%,
-                rgba(var(--blackRgb), 0.7) 70%,
-                rgba(var(--blackRgb), 0.85) 80%,
-                rgba(var(--blackRgb), 0.99) 100%);
-    }
+.imgBackdrop {
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+}
 
-    span {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        color: rgba(240, 240, 240, 0.25);
-        font-size: 0.8rem;
-        padding: 2px 5px;
-        border-radius: 5px;
-        transform: rotate(-90deg);
-        transform-origin: top right;
-    }
+.spanOverlayCaption {
+    position: absolute;
+    top: 35%;
+    right: 5%;
+    color: rgba(240, 240, 240, 0.25);
+    font-size: 0.8rem;
+    padding: 2px 5px;
+    border-radius: 5px;
+    transform: rotate(-90deg);
+    transform-origin: top right;
+    z-index: 1;
 }
