--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: transparent;
 
     img {
         height: 30px;
